--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     </head>
     <body>
         <h1>Matching Card Game!</h1>
-        <div class="grid-container"></div>
-        <p>Score: <span class="score"></span></p>
-        <div class="actions">
+        <div class="grid-container"></div>  <!-- Class that serves as a container for the game's cards -->
+        <p>Score: <span class="score"></span></p> <!-- Class that allows the score of the game to be changed while playing!-->
+        <div class="actions"> <!-- Class to contain actions within game.-->
             <button onclick="restart()">Restart</button>
             <a href="rules.html">Game Rules</a>
         </div>
